[workspace.package]
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
description = "A  key-value store called kvs"
edition = "2021"
version = "1.2.0"
license = "MIT"
# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
resolver = "2"

members = ["crates/common", "crates/kvs-client", "crates/kvs-server", "lib"]
default-members = ["lib", "crates/kvs-client", "crates/kvs-server"]

[workspace.dependencies]
anyhow = "1.0.80"
clap = { version = "4.1.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
kvs = { path = "lib" }
lazy_static = "1.4.0"
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.38"
prost = "0.12.3"

