[package]
name = "kvs"
authors.workspace = true
description.workspace = true 
edition = { workspace = true }
version = { workspace = true }

[[bin]]
name = "kvs"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.38"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
