[package]
name = "kvs"
authors.workspace = true
description.workspace = true
edition = { workspace = true }
version = { workspace = true }

[[bin]]
name = "kvs"
path = "src/bin/main.rs"

[dependencies]
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sled = "0.34.7"
regex = "1.11.1"
# tracing = "0.1.41"
# tracing-subscriber = "0.3.19"
bytes = "1.10.1"
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = { version = "0.4", features = ["html_reports"] }
predicates = "1.0.0"
rand = "0.8"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "bench"
# Disable rust-bench harness and prefer criterion's instead
harness = false
