[package]
name = "common"
authors.workspace = true
description.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
prost-types = "0.12.3"

[build-dependencies]
prost-build = "0.12.3"
