[package]
name = "kvs-client"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-client"
path = "src/client.rs"


[dependencies]
kvs = { workspace = true }
clap = { workspace = true }
anyhow = "1.0.80"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
