[package]
name = "kvs-server"
version = { workspace =  true }
edition = "2021"
authors = { workspace =  true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-server"
path = "src/server.rs"

[dependencies]
kvs = { workspace = true }
clap = { workspace = true }